correct loading wrapper covering up content

--- a/src/Components/LoadingWrapper/LoadingWrapper.module.scss
+++ b/src/Components/LoadingWrapper/LoadingWrapper.module.scss
@@ -22,5 +22,6 @@
 
 .fadeExitActive {
   opacity: 0;
+  pointer-events: none;
 }
 
